[tool.poetry]
name = "dex-trading"
version = "0.1.0"
description = ""
authors = ["Rick Albaugh <albaughrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
DateTime = "^5.5"
solders = "^0.21.0"
borsh-construct = "^0.1.0"
construct = "^2.10.70"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
